--- a/39_YelpCamp/views/campgrounds/index.ejs
+++ b/39_YelpCamp/views/campgrounds/index.ejs
@@ -1,13 +1,20 @@
 <% layout('layouts/boilerplate')%>
+
+<div id="cluster-map"></div>
     <h1>All campgrounds</h1>
     <div>
         <a href="/campgrounds/new">Add a campground</a>
     </div>
     <% for (let campground of campgrounds) { %>
-        <div class="card">
+        <div class="card mb-3">
             <div class="row">
                 <div class="col-md-4">
-                    <img class="img-fluid" alt="" src="<%=campground.image%>">
+                    <% if(campground.images.length) {%>
+                        <img class="img-fluid" alt="" src="<%=campground.images[0].url%>">
+                    <% } else { %>
+                        <img class="img-fluid" alt="" src="https://res.cloudinary.com/dlueyehnp/image/upload/v1621608741/YelpCamp/ge70vkkaug6r2juch8sc.jpg">
+                    <% } %>  
+                    
                 </div>
                 <div class="col-md-8">
                     <div class="card-body">
@@ -23,3 +30,8 @@
         </div>
     <% } %>  
     
+    <script>
+        const mapToken = '<%-process.env.MAPBOX_TOKEN%>';
+        const campgrounds = {features: <%- JSON.stringify(campgrounds) %>}
+    </script>
+    <script src="/javascripts/clusterMap.js"></script>
